# Imagebase

./: .gitignore  CLAUDE.md  Makefile  README.md  v.mod
guests/rust/: Cargo.toml
guests/rust/src/: lib.rs
guests/typescript/: package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: app_test.v  data_controller.v  main.v  middleware.v  note_controller.v  session_service.v  session_service_forgot_password_test.v  session_service_reset_password_test.v  temp.v  user_controller.v  user_service.v  utils_web.v
src/data/: data-manager.v  data-repo.v  data_repo.v  data_repo_get_latest_data_test.v  data_repo_save_data_test.v  data_repo_test.v  sync_data.v  sync_data_max_test.v  sync_data_test.v
src/msg/: message.v  message_test.v  util.v  util_get_data_test.v  validations.v  validations_assert_found_test.v  validations_has_content_test.v  validations_validate_test.v
src/note/: notes.v
src/notes/: notes.v
src/utils/: flag_parser.v  flag_parser_get_config_test.v  utils.v  utils_get_data_test.v
src/validation/: validation.v  validation_helpers.v  validation_helpers_assert_found_test.v  validation_helpers_has_content_test.v  validation_helpers_validate_test.v  (+1 more)
tasks/: start.sh  test.sh
tests/: add-data.tests.hurl  create-new-password.tests.hurl  forgot-password.tests.hurl  invalid-login.tests.hurl  invalid-register.tests.hurl  local.env  login.hurl  logout.tests.hurl  prune-run.tests.hurl  prune-seed.tests.hurl  register-user.tests.hurl  tests.sh  unauthorized.tests.hurl  validation.tests.hurl
tools/: import-from-v.py
traildepot/: config.textproto
(+5 files in other folders)
