[package]
name = "imagebase-guest"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
trailbase-wasm = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
